Closed Bug 581021 Opened 14 years ago Closed 14 years ago

js_RestoreRegExpStatics has too many arguments

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b3
Tracking Status
blocking2.0 --- final+

People

(Reporter: mounir, Assigned: mounir)

References

Details

Attachments

(1 file)

js_RestoreRegExpStatics has 3 arguments but only 2 are used.
Attached patch Patch v1Splinter Review
This patch has been originally reviewed by jorendorff in bug 345512 (it's part of the @pattern patch) but I've seen another call of this method has been added to the tree, forcing me to update the patch so bettor to have it landed as soon as possible. r=jorendorff Requesting approval for 2.0 because it's a blocker for @pattern which is part of HTML5 Forms feature we want for ff4.
Assignee: general → mounir.lamouri
Status: NEW → ASSIGNED
Attachment #459432 - Flags: approval2.0?
blocking2.0: --- → final+
Attachment #459432 - Flags: approval2.0?
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: