Bug 581021 - js_RestoreRegExpStatics has too many arguments. r=jorendorff a=blocking-2.0+